--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,10 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        run: mvn -B package --file MoneyPlugin/pom.xml
+        run: mvn -B package --file pom.xml
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: MoneyPlugin
-          path: MoneyPlugin/target/*.jar
+          path: target/*.jar
